[package]
name = "dtoa"
version = "0.4.4" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast functions for printing floating-point primitives to an io::Write"
repository = "https://github.com/dtolnay/dtoa"
documentation = "https://github.com/dtolnay/dtoa"
categories = ["value-formatting"]
readme = "README.md"
exclude = ["performance.png"]

[badges]
travis-ci = { repository = "dtolnay/dtoa" }

[features]
default = ["mesalock_sgx", "std"]
mesalock_sgx = ["std","sgx_tstd"]
std = ["mesalock_sgx"]

[dependencies]
sgx_tstd    = {rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }